installed tailwind and react router with assets

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,8 @@
 .read-the-docs {
   color: #888;
 }
+
+body {
+  background-image: url("./assets/images/background.jpg");
+  background-size: cover;
+}
